--- a/ChangeLog
+++ b/ChangeLog
@@ -4,19 +4,42 @@
 Unless noted otherwise, these changes where initiated and applied by
 Mark Overmeer.
 
-To be resolved (hopefully soon):
+To be resolved:
    facets on list base-types: length, maxLength, minLength, enumeration,
       , pattern, whiteSpace fixed to collapsed
    length facet on base64/hex encoding about binary length (tests needed)
    handle XML::LibXML::Error objects
    handle xsi:type
    useSchema() relation to ::Cache::declare()?
+ - keyRewrite in template
+
+version 1.03: Wed Mar 25 15:41:43 CET 2009
+
+	Fixes:
+
+	- template: protect output against combinatorial explosion, which
+	  did hurt [Anton Berezin]
+
+	Improvements:
+
+	- new option ::Schema::compile(abstract_types)
+
+	- template: compact the output of substitutionGroups, leaving the
+	  abstract types out and use columns in the display.
+
+	- template: add namespace details to XML and PERL output
+
+	- template: add header to XML and PERL output.
+	  New option  ::Schema::template(skip_header)
 
 version 1.02: Thu Feb 12 11:37:49 CET 2009
 
 	Fixes:
 
 	- fix useSchema() deep recursion
+
+	- writer: repair ARRAY complaint when scalar given on place
+	  where an array of values is acceptable.  [Allan Wind]
 
 version 1.01: Thu Feb 12 09:39:50 CET 2009
 
