--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,30 @@ To be resolved:
        "targetNamespace" (proposed schema feature)
  - namespace blocking option for templates; exclude deprecated elements
 
+version 1.14: Mon Apr 26 09:39:28 CEST 2010
+
+	Fixes:
+
+	- ::Template(PERL) improve key_rewrite use.
+
+	- xsi:type when schema-namespace had default prefix and the
+	  user defined elements/types namespace-less. [Brendan Knox]
+
+	- ::Writer report misfit failed due to reuse of $@
+
+	- correct validation of type "duration" by [Titi Ala'ilima]
+
+	Improvements:
+
+	- with xsi_type switches of simple types, the value is translated
+	  into a HASH containing that value, so the XSI_TYPE can be added.
+
+	- add check for dateTime and duration validation.
+
+	- ::Template(PERL) add start line '# Describing ....'
+
+	- ::Template(PERL) explicit list blocked default prefix.
+
 version 1.13: Sun Feb 21 00:09:24 CET 2010
 
 	Fixes:
